...
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_route"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/color_accent"
                        android:textColor="@color/color_text_primary"
                        android:text="@string/settings_mode_route"/>

                    <RadioButton
                        android:id="@+id/radio_radius"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/color_accent"
                        android:textColor="@color/color_text_primary"
                        android:text="@string/settings_mode_radius"/>

                </RadioGroup>

                <LinearLayout
                    android:id="@+id/radius_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:visibility="gone">

...
                        android:textColor="@color/color_accent"
                        android:textStyle="bold"
                        android:fontFamily="@font/space_grotesk"
                        android:layout_marginBottom="4dp"/>

                    <SeekBar
                        android:id="@+id/radius_seek_bar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:progressTint="@color/color_accent"
                        android:thumbTint="@color/color_accent"
                        android:max="100"
                        android:progress="30"/>
...
